# diagnostic_yaml_proposal

./: README.md  docker-compose.yml  example-ecm.yml  minimal-ecu.yml  run-cda.sh  schema.json  validate.py
yaml-to-mdd/: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
yaml-to-mdd/doc/: INDEX.md  api-examples.md  design.md
yaml-to-mdd/examples/: README.md
yaml-to-mdd/examples/basic/: README.md  basic-ecu.yaml
yaml-to-mdd/examples/minimal/: README.md  minimal-ecu.yaml
yaml-to-mdd/src/yaml_to_mdd/: __init__.py  cli_main.py
yaml-to-mdd/src/yaml_to_mdd/cli/: __init__.py  error_formatter.py  exception_handler.py  pydantic_errors.py
yaml-to-mdd/tests/: conftest.py  test_fbs_generated.py  test_proto_generated.py
yaml-to-mdd/tests/fixtures/: __init__.py  sample_yamls.py
yaml-to-mdd/tests/integration/: __init__.py  test_full_pipeline.py  test_mdd_comparison.py  test_mdd_deep_comparison.py  test_performance.py  test_roundtrip.py
yaml-to-mdd/tests/test_cli/: test_cli_main.py  test_error_formatter.py  test_pydantic_errors.py
yaml-to-mdd/tests/test_converters/: __init__.py  conftest.py  test_flatbuffers_converter.py  test_mdd_writer.py
yaml-to-mdd/tests/test_filter/: test_audience.py  test_audience_filter.py
yaml-to-mdd/tests/test_ir/: __init__.py  test_database.py  test_services.py  test_types.py
yaml-to-mdd/tests/test_models/: __init__.py  conftest.py  test_access_patterns.py  test_common.py  test_dids.py  test_dtcs.py  test_ecu.py  test_loader.py  test_memory.py  test_meta.py  test_root.py  test_routines.py  test_security.py  test_services.py  test_sessions.py  test_types.py
yaml-to-mdd/tests/test_transform/: __init__.py  conftest.py  test_service_generator.py  test_transformer.py  test_type_converter.py
yaml-to-mdd/tests/test_validation/: __init__.py  conftest.py  test_consistency_validators.py  test_errors.py  test_reference_validators.py  test_validator.py
(+52 files in other folders)
